{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PassThrough",
            "id": "894db68b-af31-4c29-9926-d8360af9d5d6",
            "actions": [
                {
                    "name": "Tap",
                    "type": "PassThrough",
                    "id": "763c7350-b38f-4bc1-bec3-10208aa706a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "217b31b8-6480-413c-b8b8-2c73043903b5",
                    "path": "<Touchscreen>/primaryTouch/pressure",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0efb1ab5-75a0-43dc-b160-2743a298e686",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "662408d5-669d-46a8-a0ea-84dd6cc09e8d",
            "actions": [
                {
                    "name": "MouseTap",
                    "type": "Value",
                    "id": "e2a80d56-2f09-4cb2-928e-d248edf91a9f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7dcdf0a8-87ad-4dbb-9bd1-32adcbc1c224",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}